--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ frontend/.idea
 backend/.idea
 .idea
 frontend/node_modules
+backend/node_modules
+common/node_modules
 node_modules
 frontend/.env.example
+backend/.env.example
+common/.env.example
 .vscode
