--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
-    "cors": "^2.8.5"
+    "@types/knex": "^0.15.2",
+    "cors": "^2.8.5",
+    "knex": "^3.1.0",
+    "pg": "^8.13.3"
   }
 }
