--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "@types/cors": "^2.8.17",
     "@types/knex": "^0.15.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "knex": "^3.1.0",
+    "mysql2": "^3.13.0",
     "pg": "^8.13.3"
   }
 }
