fbasas: Added handlebars support, debug support, and some starter prompts

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/bball-playback.ts",
-    "dev": "nodemon src/bball-playback.ts"
+    "dev": "nodemon src/bball-playback.ts",
+    "debug": "nodemon --inspect src/bball-playback.ts"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/handlebars": "^4.0.40",
     "@types/node": "^22.13.4",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
@@ -25,6 +27,7 @@
     "@types/knex": "^0.15.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "handlebars": "^4.7.8",
     "knex": "^3.1.0",
     "mysql2": "^3.13.0",
     "openai": "^4.87.3",
