--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/bball-playback.ts",
-    "dev": "nodemon --ext js,ts src/bball-playback.ts",
-    "debug": "nodemon --ext js,ts --inspect src/bball-playback.ts",
-    "test:lineup": "ts-node src/scripts/testLineupTracking.ts"
+    "dev": "nodemon src/bball-playback.ts",
+    "debug": "nodemon --inspect src/bball-playback.ts",
+    "test:lineup": "ts-node src/scripts/testLineupTracking.ts",
+    "debug:lineup": "node --inspect-brk=9230 -r ts-node/register src/scripts/testLineupTracking.ts"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/handlebars": "^4.0.40",
     "@types/node": "^22.13.4",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.8.3",
     "dotenv-cli": "^8.0.0",
     "express": "^4.21.2",
@@ -34,6 +36,7 @@
     "knex": "^3.1.0",
     "mysql2": "^3.13.0",
     "openai": "^4.87.3",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "uuid": "^11.1.0"
   }
 }
