--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "debug": "nodemon --inspect src/bball-playback.ts",
     "test:lineup": "ts-node src/scripts/testLineupTracking.ts",
     "debug:lineup": "node --inspect-brk=9230 -r ts-node/register src/scripts/testLineupTracking.ts",
-    "example:play-by-play": "ts-node src/scripts/examplePlayByPlay.ts"
+    "example:play-by-play": "ts-node src/scripts/examplePlayByPlay.ts",
+    "interactive-playback": "ts-node src/scripts/interactivePlayback.ts"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
